# qti-package-maker

./: .gitignore  AGENTS.md  README.md  VERSION  pip_requirements-dev.txt  pip_requirements.txt  pyproject.toml
devel/: build_bb_original_probe.py  build_canvas_media_probe.py  build_sample_control_zips.py  build_ultra_media_probe.py  check_package_integrity.py
docs/: BLACKBOARD_ULTRA_NOTES.md  CHANGELOG.md  CODE_ARCHITECTURE.md  COOKBOOK.md  DEVELOPMENT.md  ENGINES.md  ENGINE_AUTHORING.md  FILE_STRUCTURE.md  FORMATS.md  INSTALL.md  MEDIA_LMS_PROBES.md  NEWS.md  RELATED_PROJECTS.md  RELEASE_HISTORY.md  ROADMAP.md  TODO.md  TROUBLESHOOTING.md  USAGE.md
docs/archive/: CODE_DESIGN.md
qti_package_maker/: package_interface.py
qti_package_maker/assessment_items/: item_bank.py  item_types.py  validator.py
qti_package_maker/common/: anti_cheat.py  color_wheel.py  franken_bptools.py  media_assets.py  package_integrity.py  qti_manifest.py  string_functions.py  tabulate_compat.py  yaml_tools.py  zip_writer.py
qti_package_maker/engines/: base_engine.py  engine_registration.py
tests/: conftest.py  test_all_engines.py  test_bbq_converter_all_types.py  test_canvas.py  test_human.py  test_human_readable_tables.py  test_strip_prefix.py  test_ultra_compat_gate.py  test_ultra_html_sanitize.py  test_ultra_type_normalize.py
tests/fixtures/: bb_export_slice_README.md
tests/integration/: test_bbq_converter_cli.py  test_blackboard_export_zip_output.py  test_blackboard_export_zip_read.py  test_blackboard_export_zip_read_media.py  test_blackboard_export_zip_roundtrip.py  test_cross_format_image_roundtrip.py  test_engine_outputs.py  test_media_end_to_end.py  test_package_cross_references.py  test_package_interface.py  test_package_interface_media_read.py  test_probe_package_structure.py  test_qti_writer_media.py  (+4 more)
tools/: bbq_converter.py  xml_formatter.py
(+124 files in other folders)
